--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     font-family: "Pretendard",serif;
                 }
             body {
-                background-image: url('웨딩.jpg') ;
+                background-image: url('웨딩.JPG') ;
             }
             .profile {
                 width: 100px;
