--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 }
             body {
                 background-image: url('웨딩.JPG') ;
+                background-size: cover;
             }
             .profile {
                 width: 100px;
