--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
                     font-family: "Pretendard",serif;
                 }
             body {
+                background-color: white;
+                border-radius: 100%;
+                
                 background-image: url('웨딩.JPG') ;
+                background-position: center;
                 background-size: cover;
             }
             .profile {
                 width: 100px;
                 height: 100px;
 
-                background-color: green;
+                background-color: white;
                 border-radius: 100%;
 
                 border : 2px solid white;
@@ -37,7 +41,20 @@
                 margin-top: 30px;
                 margin-bottom: 10px;
             }
-            .sub {
+            .sub1 {
+                color: white;
+                font-size: 14px;
+
+                margin-top: 0px;
+                margin-bottom: 30px;
+            }
+            .sub2 {
+                color: white;
+                font-size: 14px;
+
+                margin-top: 0px;
+            }
+            .sub3 {
                 color: white;
                 font-size: 14px;
 
@@ -83,7 +100,9 @@
         <div class="wrap">
             <div class="profile"></div>
             <h1 class="main">Yoon</h1>
-            <P class="sub">#웨딩 #잔치 #스냅 </P>
+            <P class="sub1">#웨딩 #잔치 #스냅 </P>
+            <P class="sub2">ULL OF LOVE ♥ </P>
+            <P class="sub3">사랑 가득한 사진을 찍습니다. </P>
             <a target="_blank" href="https://pf.kakao.com/_XRxmSb">NUVO 카카오톡</a>
             <a target="_blank" href="https://blog.naver.com/fulloflove-nuvo">NUVO 블로그</a>
             <a target="_blank" href="https://www.instagram.com/hyo._.win/">대표 효원 작가님 인스타그램</a>
