--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="profile"></div>
             <h1 class="main">Yoon</h1>
             <P class="sub1">#웨딩 #잔치 #스냅 </P>
-            <P class="sub2">ULL OF LOVE ♥ </P>
+            <P class="sub2">FULL OF LOVE ♥ </P>
             <P class="sub3">사랑 가득한 사진을 찍습니다. </P>
             <a target="_blank" href="https://pf.kakao.com/_XRxmSb">NUVO 카카오톡</a>
             <a target="_blank" href="https://blog.naver.com/fulloflove-nuvo">NUVO 블로그</a>
