--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <body>
         <div class="wrap">
             <div class="profile"></div>
-            <h1 class="main">Yoon</h1>
+            <h1 class="main">NUVO</h1>
             <P class="sub1">#웨딩 #잔치 #스냅 </P>
             <P class="sub2">FULL OF LOVE ♥ </P>
             <P class="sub3">사랑 가득한 사진을 찍습니다. </P>
