--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:title" content="NUVO" />
-        <meta property="og:description" content="사진 찍어 Dream" />
+        <meta property="og:description" content="사랑 가득한 사진을 찍습니다." />
         <meta property="og:image" content="상추.jpg" />
         <title>NUVO - 프로필 링크</title>
         <style>
@@ -106,7 +106,7 @@
             <a target="_blank" href="https://pf.kakao.com/_XRxmSb">NUVO 카카오톡</a>
             <a target="_blank" href="https://blog.naver.com/fulloflove-nuvo">NUVO 블로그</a>
             <a target="_blank" href="https://www.instagram.com/hyo._.win/">대표 효원 작가님 인스타그램</a>
-            <a target="_blank" href="https://www.instagram.com/syoon_2/">실장 상윤 작가님 인스타그램</a>
+            <a target="_blank" href="https://www.instagram.com/y00_film/">실장 상윤 작가님 인스타그램</a>
         </div>
     </body>
 </html>
