--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 border-radius: 100%;
                 
                 background-image: url('웨딩.JPG') ;
-                background-position: center;
                 background-size: cover;
             }
             .profile {
@@ -99,14 +98,13 @@
     <body>
         <div class="wrap">
             <div class="profile"></div>
-            <h1 class="main">NUVO</h1>
-            <P class="sub1">#웨딩 #잔치 #스냅 </P>
+            <h1 class="main">NUVO SNAP</h1>
+            <P class="sub1">사랑 가득한 사진을 담습니다 </P>
             <P class="sub2">FULL OF LOVE ♥ </P>
-            <P class="sub3">사랑 가득한 사진을 찍습니다. </P>
-            <a target="_blank" href="https://pf.kakao.com/_XRxmSb">NUVO 카카오톡</a>
-            <a target="_blank" href="https://blog.naver.com/fulloflove-nuvo">NUVO 블로그</a>
-            <a target="_blank" href="https://www.instagram.com/hyo._.win/">대표 효원 작가님 인스타그램</a>
-            <a target="_blank" href="https://www.instagram.com/y00_film/">실장 상윤 작가님 인스타그램</a>
+            <a target="_blank" href="https://blog.naver.com/fulloflove-nuvo">NUVO 소개 블로그</a>
+            <a target="_blank" href="https://pf.kakao.com/_XRxmSb">예약/문의 카카오톡 채널</a>
+            <a target="_blank" href="https://www.instagram.com/hyo._.win/">대표 염작가님 인스타그램</a>
+            <a target="_blank" href="https://www.instagram.com/y00_film/">실장 윤작가님 인스타그램</a>
         </div>
     </body>
 </html>
