--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 border-radius: 100%;
                 
                 background-image: url('커플.png') ;
+                background-position: center;
                 background-size: cover;
             }
             .profile {
