--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 background-color: white;
                 border-radius: 100%;
                 
-                background-image: url('커플3.jpg') ;
+                background-image: url('커플.png') ;
                 background-size: cover;
             }
             .profile {
