--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
             <P class="sub2">FULL OF LOVE ♥ </P>
             <a target="_blank" href="https://blog.naver.com/fulloflove-nuvo">NUVO 소개 블로그</a>
             <a target="_blank" href="https://pf.kakao.com/_XRxmSb">예약/문의 카카오톡 채널</a>
-            <a target="_blank" href="https://www.instagram.com/hyo._.win/">대표 염작가님 인스타그램</a>
-            <a target="_blank" href="https://www.instagram.com/y00_film/">실장 윤작가님 인스타그램</a>
+            <a target="_blank" href="https://www.instagram.com/yoon1_film/">실장 윤작가님 /본식 스냅/ 인스타그램</a>
+            <a target="_blank" href="https://www.instagram.com/yoon2_film/">실장 윤작가님 /일반 스냅/ 인스타그램</a>
         </div>
     </body>
 </html>
